--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"react-native-reanimated": "~3.17.4",
 		"react-native-safe-area-context": "5.4.0",
 		"react-native-screens": "~4.11.1",
+		"react-native-track-player": "^4.1.1-nightly-c46c8fb107e0de61d9b33c28e7228002077b4f20",
 		"react-native-web": "~0.20.0",
 		"react-native-webview": "13.13.5"
 	},
