--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
   },
   "dependencies": {
     "@d11/react-native-fast-image": "^8.11.1",
+    "@dr.pogodin/react-native-fs": "^2.35.1",
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.2.4",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@shopify/flash-list": "1.7.6",
     "@types/react-autocomplete": "^1.8.11",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "^5.2.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -34,14 +39,18 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-awesome-slider": "^2.9.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-image-colors": "^2.5.0",
     "react-native-loader-kit": "^2.0.8",
+    "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-track-player": "^4.1.1-nightly-c46c8fb107e0de61d9b33c28e7228002077b4f20",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "ts-pattern": "^5.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
