--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="jbaudio"/>
+        <data android:scheme="sonicbooks"/>
         <data android:scheme="exp+jbaudio"/>
       </intent-filter>
     </activity>
