--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@shopify/flash-list": "1.7.6",
     "@types/react-autocomplete": "^1.8.11",
     "expo": "~53.0.22",
+    "expo-asset": "^12.0.9",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
-    "expo-dev-client": "^5.2.4",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
