--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dr.pogodin/react-native-fs": "^2.35.1",
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.2.4",
+    "@missingcore/audio-metadata": "^1.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
