--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@shopify/flash-list": "1.7.6",
+    "@shopify/flash-list": "^2.0.3",
     "@types/react-autocomplete": "^1.8.11",
     "expo": "~53.0.22",
     "expo-asset": "^12.0.9",
@@ -51,7 +51,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-track-player": "^4.1.1-nightly-c46c8fb107e0de61d9b33c28e7228002077b4f20",
+    "react-native-track-player": "^5.0.0-alpha0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "ts-pattern": "^5.8.0"
