--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.3",
     "@babel/preset-env": "^7.28.3",
+    "@types/babel__core": "^7.20.5",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "eslint": "^9.34.0",
