--- a/eas.json
+++ b/eas.json
@@ -6,13 +6,19 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "ANDROID_SDK_ROOT": "/home/jason/Android/Sdk"
+      }
     },
     "preview": {
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "ANDROID_SDK_ROOT": "/home/jason/Android/Sdk"
+      }
     }
   },
   "submit": {
