--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.2.4",
     "@missingcore/react-native-metadata-retriever": "^1.1.0",
+    "@nozbe/watermelondb": "^0.28.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -45,6 +46,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
     "react-native-awesome-slider": "^2.9.0",
+    "react-native-blob-util": "^0.22.2",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-fast-shadow": "^0.1.1",
     "react-native-gesture-handler": "~2.24.0",
@@ -63,6 +65,7 @@
   "devDependencies": {
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.3",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
     "@babel/preset-env": "^7.28.3",
     "@types/babel__core": "^7.20.5",
     "@types/react": "~19.0.10",
