--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "JBAudio",
+    "name": "Sonicbooks",
     "slug": "JBAudio",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -49,7 +49,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#000"
         }
-      ]
+      ],
+      "expo-asset"
     ],
     "experiments": {
       "typedRoutes": true,
