--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "1.7.6",
     "@types/react-autocomplete": "^1.8.11",
+    "babel-preset-expo": "~13.0.0",
     "expo": "~53.0.22",
-    "expo-asset": "^12.0.9",
+    "expo-asset": "~11.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
@@ -44,10 +46,11 @@
     "music-metadata": "^11.9.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.6",
+    "react-mediainfo": "^0.0.42",
+    "react-native": "0.79.5",
     "react-native-awesome-slider": "^2.9.0",
     "react-native-blob-util": "^0.22.2",
-    "react-native-edge-to-edge": "^1.7.0",
+    "react-native-edge-to-edge": "1.6.0",
     "react-native-fast-shadow": "^0.1.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-colors": "^2.5.0",
