--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jbaudio",
+  "name": "sonicbooks",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -42,6 +42,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
+    "lucide-react-native": "^0.545.0",
     "mediainfo.js": "^0.3.6",
     "music-metadata": "^11.9.0",
     "react": "19.0.0",
@@ -59,6 +60,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-track-player": "^4.1.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
