--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "1.7.6",
+    "@shopify/react-native-skia": "v2.0.0-next.4",
     "@types/react-autocomplete": "^1.8.11",
     "babel-preset-expo": "~13.0.0",
     "expo": "~53.0.22",
