--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-colors": "^2.5.0",
     "react-native-loader-kit": "^2.0.8",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
