--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -57,3 +57,5 @@ expo.useLegacyPackaging=false
 
 # Whether the app is configured to use edge-to-edge via the app config or `react-native-edge-to-edge` plugin
 expo.edgeToEdgeEnabled=true
+android.kotlinVersion=2.0.21
+android.packagingOptions.pickFirsts=**/libc++_shared.so
