Chore: set up setting and retrieving data from db

--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      ["@morrowdigital/watermelondb-expo-plugin", { "disableJsi": true }],
+      ["@morrowdigital/watermelondb-expo-plugin", { "disableJsi": false }],
       [
         "expo-build-properties",
         {
