Fix: convert to Lucide Icons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"cSpell.words": ["Entypo", "Pressable", "RNFS", "Sanderson"]
+	"cSpell.words": [
+		"Entypo",
+		"Pressable",
+		"RNFS",
+		"Sanderson",
+		"Sonicbooks",
+		"watermelondb"
+	]
 }
