--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@shopify/flash-list": "1.7.6",
-    "@shopify/react-native-skia": "v2.0.0-next.4",
+    "@shopify/flash-list": "^2.1.0",
+    "@shopify/react-native-skia": "^2.3.6",
     "@types/react-autocomplete": "^1.8.11",
     "babel-preset-expo": "~13.0.0",
     "expo": "~53.0.22",
@@ -62,13 +62,14 @@
     "react-native-loader-kit": "^2.0.8",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-permissions": "^5.4.2",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-track-player": "^4.1.2",
+    "react-native-track-player": "^5.0.0-alpha0-nightly-359af5a12d712d3b685530aed9b9625865a25d74",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-worklets": "^0.6.1",
     "ts-pattern": "^5.8.0",
     "uuid": "^13.0.0",
     "zustand": "^5.0.8"
