--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -9,8 +9,12 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
+# That's needed for java to be able the create the APK with our 300MB native  library
+# Basically we grant java a 4GB heap.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx4608m -XX:MaxMetaspaceSize=512m
+
+
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
