Chore: add react compiler to app

--- a/app.json
+++ b/app.json
@@ -67,7 +67,8 @@
     ],
     "experiments": {
       "typedRoutes": true,
-      "tsconfigPaths": true
+      "tsconfigPaths": true,
+      "reactCompiler": true
     },
     "extra": {
       "router": {},
