--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@shopify/flash-list": "^2.1.0",
     "@shopify/react-native-skia": "^2.3.6",
     "@types/react-autocomplete": "^1.8.11",
+    "babel-plugin-react-compiler": "^19.0.0-beta-af1b7da-20250417",
     "babel-preset-expo": "~13.0.0",
     "expo": "~53.0.22",
     "expo-asset": "~11.1.7",
@@ -50,6 +51,7 @@
     "mediainfo.js": "^0.3.6",
     "music-metadata": "^11.9.0",
     "react": "19.0.0",
+    "react-compiler-runtime": "19.0.0",
     "react-dom": "19.0.0",
     "react-mediainfo": "^0.0.42",
     "react-native": "0.79.6",
