Chore: build out timer options modal

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@shopify/flash-list": "^2.1.0",
     "@shopify/react-native-skia": "^2.3.6",
     "@types/react-autocomplete": "^1.8.11",
-    "babel-plugin-react-compiler": "^19.0.0-beta-af1b7da-20250417",
-    "babel-preset-expo": "~13.0.0",
+    "babel-plugin-react-compiler": "1.0.0",
+    "babel-preset-expo": "^54.0.6",
     "expo": "~53.0.22",
     "expo-asset": "~11.1.7",
     "expo-blur": "~14.1.5",
@@ -51,7 +51,7 @@
     "mediainfo.js": "^0.3.6",
     "music-metadata": "^11.9.0",
     "react": "19.0.0",
-    "react-compiler-runtime": "19.0.0",
+    "react-compiler-runtime": "1.0.0",
     "react-dom": "19.0.0",
     "react-mediainfo": "^0.0.42",
     "react-native": "0.79.6",
@@ -68,6 +68,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-timer-picker": "^2.2.3",
     "react-native-track-player": "^5.0.0-alpha0-nightly-359af5a12d712d3b685530aed9b9625865a25d74",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
