--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native": "0.79.6",
     "react-native-awesome-slider": "^2.9.0",
     "react-native-blob-util": "^0.22.2",
+    "react-native-circular-progress": "^1.4.1",
     "react-native-edge-to-edge": "1.6.0",
     "react-native-fast-shadow": "^0.1.1",
     "react-native-gesture-handler": "~2.24.0",
