--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@morrowdigital/watermelondb-expo-plugin": "^2.3.3",
     "@nozbe/watermelondb": "^0.28.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/drawer": "^7.7.2",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@react-navigation/stack": "^7.6.3",
     "@shopify/flash-list": "^2.1.0",
     "@shopify/react-native-skia": "^2.3.6",
     "@types/react-autocomplete": "^1.8.11",
