Chore: add fadeout duration to settings

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@missingcore/react-native-metadata-retriever": "^1.1.0",
     "@morrowdigital/watermelondb-expo-plugin": "^2.3.3",
     "@nozbe/watermelondb": "^0.28.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-native-segmented-control/segmented-control": "2.5.7",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.7.2",
