--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "eslint-config-expo": "~9.2.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "expo-atlas": "^0.4.0",
     "prettier": "^3.6.2",
     "typescript": "~5.8.3"
   },
