Chore: update db fields to include imgColors, bookProgressVal, and track skip times

--- a/eas.json
+++ b/eas.json
@@ -19,6 +19,12 @@
       "env": {
         "ANDROID_SDK_ROOT": "/home/jason/Android/Sdk"
       }
+    },
+    "staging": {
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
