--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-media-library": "~17.1.7",
+    "expo-mesh-gradient": "~0.3.4",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -73,6 +74,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-native-worklets": "^0.6.1",
+    "tinycolor2": "^1.6.0",
     "ts-pattern": "^5.8.0",
     "zustand": "^5.0.8"
   },
