--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-native-loader-kit": "^2.0.8",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-permissions": "^5.4.2",
-    "react-native-reanimated": "^4.1.3",
+    "react-native-reanimated": "4.1.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
