Chore: build out editTitleDetails page and add functionality

--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
       "bundleIdentifier": "com.fuzzylogic42.JBAudio"
     },
     "android": {
+      "softwareKeyboardLayoutMode": "pan",
       "permissions": [
         "android.permission.READ_MEDIA_AUDIO",
         "android.permission.MODIFY_AUDIO_SETTINGS"
