Chore: remove unused packages

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@bam.tech/react-native-image-resizer": "^3.0.11",
     "@dr.pogodin/react-native-fs": "^2.35.1",
-    "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.2.4",
     "@missingcore/react-native-metadata-retriever": "^1.1.0",
     "@morrowdigital/watermelondb-expo-plugin": "^2.3.3",
@@ -22,14 +21,12 @@
     "@react-native-documents/picker": "^11.0.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-native-segmented-control/segmented-control": "2.5.7",
-    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.7.2",
-    "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@react-navigation/stack": "^7.6.3",
+    "@react-navigation/native-stack": "^7.8.6",
     "@shopify/flash-list": "^2.1.0",
     "@shopify/react-native-skia": "^2.3.6",
-    "@types/react-autocomplete": "^1.8.11",
+    "@somesoap/react-native-image-palette": "^1.2.2",
     "babel-plugin-react-compiler": "1.0.0",
     "babel-preset-expo": "^54.0.6",
     "expo": "~53.0.22",
@@ -38,7 +35,6 @@
     "expo-build-properties": "~0.14.8",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
-    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
@@ -48,13 +44,8 @@
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.11",
-    "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.545.0",
     "react": "19.0.0",
-    "react-compiler-runtime": "1.0.0",
-    "react-dom": "19.0.0",
     "react-native": "0.79.6",
     "react-native-awesome-slider": "^2.9.0",
     "react-native-circular-progress": "^1.4.1",
@@ -74,8 +65,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-native-worklets": "^0.6.1",
+    "rxjs": "^7.8.2",
     "tinycolor2": "^1.6.0",
-    "ts-pattern": "^5.8.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
