--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@bam.tech/react-native-image-resizer": "^3.0.11",
+    "@ctrl/tinycolor": "^4.2.0",
     "@dr.pogodin/react-native-fs": "^2.35.1",
     "@gorhom/bottom-sheet": "^5.2.4",
     "@missingcore/react-native-metadata-retriever": "^1.1.0",
@@ -65,7 +66,6 @@
     "react-native-webview": "13.13.5",
     "react-native-worklets": "^0.6.1",
     "rxjs": "^7.8.2",
-    "tinycolor2": "^1.6.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
