--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.545.0",
+    "pressto": "^0.6.0",
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-awesome-slider": "^2.9.0",
