--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
 		"experimentalDecorators": true,
 		"skipLibCheck": true,
 		"resolveJsonModule": true,
+		"ignoreDeprecations": "6.0",
 		"baseUrl": ".",
 		"paths": {
 			"@/*": [
