--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/drawer": "^7.7.2",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.8.6",
+    "@sentry/react-native": "^7.8.0",
     "@shopify/flash-list": "^2.1.0",
     "@shopify/react-native-skia": "^2.3.6",
     "@somesoap/react-native-image-palette": "^1.2.2",
