--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@bam.tech/react-native-image-resizer": "^3.0.11",
@@ -27,7 +28,6 @@
     "@react-navigation/native-stack": "^7.8.6",
     "@sentry/react-native": "^7.8.0",
     "@shopify/flash-list": "^2.1.0",
-    "@shopify/react-native-skia": "^2.3.6",
     "@somesoap/react-native-image-palette": "^1.2.2",
     "babel-plugin-react-compiler": "1.0.0",
     "babel-preset-expo": "^54.0.6",
@@ -82,6 +82,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "expo-atlas": "^0.4.0",
+    "patch-package": "^8.0.1",
     "prettier": "^3.6.2",
     "typescript": "~5.8.3"
   },
