--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,6 +122,7 @@ android {
         jniLibs {
             useLegacyPackaging (findProperty('expo.useLegacyPackaging')?.toBoolean() ?: false)
         }
+        pickFirst '**/libc++_shared.so'
     }
     androidResources {
         ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:!CVS:!thumbs.db:!picasa.ini:!*~'
@@ -149,8 +150,8 @@ android {
 }
 
 dependencies {
-          implementation project(':watermelondb-jsi')
-          
+    implementation project(':watermelondb-jsi')
+
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
