--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-native-worklets": "^0.6.1",
+    "reanimated-color-picker": "^4.2.0",
     "rxjs": "^7.8.2",
     "zustand": "^5.0.8"
   },
