--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "babel-preset-expo": "^54.0.6",
     "expo": "~53.0.22",
     "expo-asset": "~11.1.7",
-    "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
@@ -51,7 +50,7 @@
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-awesome-slider": "^2.9.0",
-    "react-native-circular-progress": "^1.4.1",
+    "react-native-copilot": "^3.3.3",
     "react-native-edge-to-edge": "1.6.0",
     "react-native-fast-shadow": "^0.1.1",
     "react-native-gesture-handler": "~2.24.0",
