--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-text-ticker": "^1.15.0",
     "react-native-timer-picker": "^2.2.3",
     "react-native-track-player": "^5.0.0-alpha0-nightly-359af5a12d712d3b685530aed9b9625865a25d74",
     "react-native-webview": "13.13.5",
