--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "react-native-loader-kit": "^4.1.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-permissions": "^5.4.2",
+    "react-native-purchases": "^9.7.5",
+    "react-native-purchases-ui": "^9.7.5",
     "react-native-reanimated": "4.1.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
