Fix: route from notification player when app is fully closed - was crashing app

--- a/eas.json
+++ b/eas.json
@@ -20,7 +20,8 @@
     "production": {
       "autoIncrement": true,
       "env": {
-        "ANDROID_SDK_ROOT": "/home/jason/Android/Sdk"
+        "ANDROID_SDK_ROOT": "/home/jason/Android/Sdk",
+        "SENTRY_DISABLE_AUTO_UPLOAD": "true"
       }
     },
     "staging": {
