Fix: add public api key to eas.json for now - build wasnt connecting w/o it

--- a/eas.json
+++ b/eas.json
@@ -18,7 +18,8 @@
       "autoIncrement": true,
       "env": {
         "ANDROID_SDK_ROOT": "/home/jason/Android/Sdk",
-        "SENTRY_DISABLE_AUTO_UPLOAD": "true"
+        "SENTRY_DISABLE_AUTO_UPLOAD": "true",
+        "EXPO_PUBLIC_REVENUECAT_GOOGLE_API_KEY": "goog_zFaTAcSCKFBNGsdvOyoiFnkglwz"
       }
     },
     "staging": {
